[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fontes/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Tema_jogo.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="ColorRect" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0823529, 0.0823529, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/CenterContainer"]
margin_left = 350.0
margin_top = 202.0
margin_right = 674.0
margin_bottom = 398.0

[node name="PausedLabel" type="Label" parent="Popup/CenterContainer/VBoxContainer"]
margin_right = 324.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="Continuar" type="Button" parent="Popup/CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 324.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "Continuar"

[node name="Salvar" type="Button" parent="Popup/CenterContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 324.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "Salvar Jogo"

[node name="Carregar" type="Button" parent="Popup/CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 324.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 2 )
text = "Carregar Jogo"

[node name="Retornar" type="Button" parent="Popup/CenterContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 324.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 2 )
text = "Retornar a tela inicial"

[connection signal="pressed" from="Popup/CenterContainer/VBoxContainer/Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="Popup/CenterContainer/VBoxContainer/Salvar" to="." method="_on_Salvar_pressed"]
[connection signal="pressed" from="Popup/CenterContainer/VBoxContainer/Carregar" to="." method="_on_Carregar_pressed"]
[connection signal="pressed" from="Popup/CenterContainer/VBoxContainer/Retornar" to="." method="_on_Retornar_pressed"]
